--- a/src/main/resources/templates/admin/cs/notice/list.html
+++ b/src/main/resources/templates/admin/cs/notice/list.html
@@ -1,240 +1,116 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="content" th:fragment="list">
+    <link rel="stylesheet" th:href="@{/css/admin/list.css}" />
+    <div class="dashboard">
+        <div class="content_header">
+            <h1>공지사항 목록</h1>
+            <p>
+                HOME > 고객센터 > <strong>공지사항</strong>
+            </p>
+        </div>
+    <section class="sectionBox">
+        <div>
+            <select name="type" onchange="firstOption()">
+                <option>유형선택</option>
+                <option value="all">전체</option>
+                <option value="service">고객서비스</option>
+                <option value="safe">안전거래</option>
+                <option value="danger">위해상품</option>
+                <option value="event">이벤트당첨</option>
+            </select>
+        </div>
+        <table class="admingraph">
+            <tr class="admin_title" style="height: 50px;">
+                <th><input type="checkbox" name="allCheck" /></th>
+                <th>번호</th>
+                <th>유형</th>
+                <th>제목</th>
+                <th>조회</th>
+                <th>날짜</th>
+                <th>관리</th>
+            </tr>
 
-<head>
-    <meta charset="UTF-8">
-    <title>롯데on 관리자 공지사항 목록</title>
-    <link rel="stylesheet" href="/static/css/admin/list.css">
-</head>
+            <tr class="admin_notice-list">
+                <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
+                <td>100</td>
+                <td style="white-space: nowrap;">[유형선택]</td>
+                <td style="text-align: left">
+                   <span>
+                        <a th:href="@{/admin/layout/cs/notice/view}">
+                            <span style="white-space: nowrap;">[안내] 제목</span>
+                        </a>
+                    </span>
+                </td>
+                <td>120</td>
+                <td style="white-space: nowrap;">2024-10-14</td>
+                <td>
+                    <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
+                    <br>
+                    <a href="">[수정]</a>
+                </td>
+            </tr>
 
-<!--내용 시작-->
+            <tr class="admin_notice-list">
+                <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
+                <td>100</td>
+                <td style="white-space: nowrap;">[유형선택]</td>
+                <td style="text-align: left">
+                    <span>
+                        <a th:href="@{/admin/layout/cs/notice/view}">
+                            <span style="white-space: nowrap;">[안내] 제목</span>
+                        </a>
+                    </span>
+                </td>
+                <td>120</td>
+                <td style="white-space: nowrap;">2024-10-14</td>
+                <td>
+                    <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
+                    <br>
+                    <a href="">[수정]</a>
+                </td>
+            </tr>
 
-<body>
-    <section id="admin-notice-list">
-        <div class="header_wrapper">
-            <header>
-                <a href="#" id="admin_logo">
-                    <img src="/static/images/admin/logo(wh).png" alt="admin_logo" />
-                </a>
-                <div class="home">
-                    <a href="#">HOME | </a>
-                    <a href="#">로그아웃 | </a>
-                    <a href="#">고객센터</a>
-                </div>
-            </header>
+            <tr class="admin_notice-list">
+                <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
+                <td>100</td>
+                <td style="white-space: nowrap;">[유형선택]</td>
+                <td style="text-align: left">
+                   <span>
+                        <a th:href="@{/admin/layout/cs/notice/view}">
+                            <span style="white-space: nowrap;">[안내] 제목</span>
+                        </a>
+                   </span>
+                </td>
+                <td>120</td>
+                <td style="white-space: nowrap;">2024-10-14</td>
+                <td>
+                    <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
+                    <br>
+                    <a href="">[수정]</a>
+                </td>
+            </tr>
+
+        </table>
+        <a class="delete_btn">선택삭제</a>
+        <a th:href="@{/admin/layout/cs/notice/write}" class="registration_btn">작성하기</a>
+
+        <div class="pagingBox">
+            <div class="pagingList">
+                <!-- 이전 버튼 -->
+                <a href="#" class="prev"></a>
+
+                <!-- 페이지 링크 -->
+                <a href="#">1</a>
+                <a href="#" class="active">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+
+                <!-- 다음 버튼 -->
+                <a href="#" class="next">></a>
+            </div>
         </div>
 
-        
-        <main>
-
-            <aside>
-                <ul id="admin_sidebar">
-                    <li>
-                        <a href="#"><i class="fa fa-cogs" aria-hidden="true"></i>환경설정</a>
-                        <ol>
-                            <li><a href="#">기본환경정보</a></li>
-                            <li><a href="#">배너관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-store" aria-hidden="true"></i>상점관리</a>
-                        <ol>
-                            <li><a href="#">판매자현황</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-users" aria-hidden="true"></i>회원관리</a>
-                        <ol>
-                            <li><a href="#">회원현황</a></li>
-                            <li><a href="#">포인트관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-box-open" aria-hidden="true"></i>상품관리</a>
-                        <ol>
-                            <li><a href="#">상품현황</a></li>
-                            <li><a href="#">상품등록</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i>주문관리</a>
-                        <ol>
-                            <li><a href="#">주문현황</a></li>
-                            <li><a href="#">매출현황</a></li>
-                            <li><a href="#">배송관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>고객센터</a>
-                        <ol>
-                            <li><a href="#">공지사항</a></li>
-                            <li><a href="#">자주묻는질문</a></li>
-                            <li><a href="#">문의하기</a></li>
-                        </ol>
-                    </li>
-                </ul>
-            </aside>
-
-            <!-- 컨텐츠 시작 -->
-            <div class="content">
-
-                <div class="dashboard">
-                <div class="content_header">
-                    <h1>공지사항 목록</h1>
-                    <p>
-                        HOME > 고객센터 > <strong>공지사항</strong>
-                    </p>
-                </div>
-
-                <section class="sectionBox">
-                    <div>
-                        <select name="type" onchange="firstOption()">
-                            <option>유형선택</option>
-                            <option value="all">전체</option>
-                            <option value="service">고객서비스</option>
-                            <option value="safe">안전거래</option>
-                            <option value="danger">위해상품</option>
-                            <option value="event">이벤트당첨</option>
-                        </select>
-                    </div>
-                    <table class="admingraph">
-                        <tr class="admin_title" style="height: 50px;">
-                            <th><input type="checkbox" name="allCheck" /></th>
-                            <th>번호</th>
-                            <th>유형</th>
-                            <th>제목</th>
-                            <th>조회</th>
-                            <th>날짜</th>
-                            <th>관리</th>
-                        </tr>
-
-                        <tr class="admin_notice-list" style="height: 50px;">
-                            <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
-                            <td>100</td>
-                            <td style="white-space: nowrap;">[유형선택]</td>
-                            <td style="text-align: left">
-                                <span>
-                                    <a href="/admin/cs/notice/view?noticeNo=noticeNo">
-                                        <span style="white-space: nowrap;">[안내] 제목</span>
-                                    </a>
-                                </span>
-                            </td>
-                            <td>120</td>
-                            <td style="white-space: nowrap;">2024-10-14</td>
-                            <td>
-                                <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
-                                <br>
-                                <a href="">[수정]</a>
-                            </td>
-                        </tr>
-
-                        <tr class="admin_notice-list">
-                            <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
-                            <td>100</td>
-                            <td style="white-space: nowrap;">[유형선택]</td>
-                            <td style="text-align: left">
-                                <span>
-                                    <a href="/admin/cs/notice/view?noticeNo=noticeNo">
-                                        <span style="white-space: nowrap;">[안내] 제목</span>
-                                    </a>
-                                </span>
-                            </td>
-                            <td>120</td>
-                            <td style="white-space: nowrap;">2024-10-14</td>
-                            <td>
-                                <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
-                                <br>
-                                <a href="">[수정]</a>
-                            </td>
-                        </tr>
-
-                        <tr class="admin_notice-list">
-                            <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
-                            <td>100</td>
-                            <td style="white-space: nowrap;">[유형선택]</td>
-                            <td style="text-align: left">
-                                <span>
-                                    <a href="/admin/cs/notice/view?noticeNo=noticeNo">
-                                        <span style="white-space: nowrap;">[안내] 제목</span>
-                                    </a>
-                                </span>
-                            </td>
-                            <td>120</td>
-                            <td style="white-space: nowrap;">2024-10-14</td>
-                            <td>
-                                <a onclick="modifyProdStatus()" class="product__delete-btn">[삭제]</a>
-                                <br>
-                                <a href="">[수정]</a>
-                            </td>
-                        </tr>
-
-                    </table>
-                    <a class="delete_btn">선택삭제</a>
-                    <a class="registration_btn">작성하기</a>
-
-                    <div class="pagingBox">
-                        <div class="pagingList">
-                            <!-- 이전 버튼 -->
-                            <a href="#" class="prev"></a>
-
-                            <!-- 페이지 링크 -->
-                            <a href="#">1</a>
-                            <a href="#" class="active">2</a>
-                            <a href="#">3</a>
-                            <a href="#">4</a>
-                            <a href="#">5</a>
-
-                            <!-- 다음 버튼 -->
-                            <a href="#" class="next">></a>
-                        </div>
-                    </div>
-
-                </section>
-                
-                </div>
-            </div>
-        </main>
-        <!-- 상품목록 컨텐츠 끝 -->
     </section>
 
-    <!--내용 끝-->
-    <div class="footer_wrapper" th:fragment="footer">
-        <footer>
-            <div id="version">LotteON ADMINISTRATOR Version 0.0.1</div>
-            <div id="copyright">
-                Copyrightⓒ LotteOn_Team1 All rights reserved.
-            </div>
-        </footer>
     </div>
-    
-</body>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-    const sidebar = document.querySelectorAll('#admin_sidebar > li > a');
-    sidebar.forEach(link => {
-            const subMenu = link.nextElementSibling;
-
-            // 마우스가 들어왔을 때(submenu 열기)
-            link.addEventListener('mouseenter', function() {
-                subMenu.style.display = 'block';
-            });
-
-            // 마우스가 나갔을 때(submenu 닫기)
-            link.addEventListener('mouseleave', function() {
-                subMenu.style.display = 'none';
-            });
-
-            // 서브 메뉴 자체에 대해서도 마우스가 나갔을 때 닫히지 않도록 처리
-            subMenu.addEventListener('mouseenter', function() {
-                subMenu.style.display = 'block'; // 유지
-            });
-
-            subMenu.addEventListener('mouseleave', function() {
-                subMenu.style.display = 'none';  // 메뉴 닫기
-            });
-        });
-    });
-</script>
-
-</html>
+</div>
