--- a/src/main/resources/templates/admin/shop/sales.html
+++ b/src/main/resources/templates/admin/shop/sales.html
@@ -1,194 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>롯데on 관리자 매출현황</title>
-    <link rel="stylesheet" href="/static/css/admin/list.css">
-</head>
-
-<!--내용 시작-->
-
-<body>
-    <section id="admin-notice-list">
-        <div class="header_wrapper">
-            <header>
-                <a href="#" id="admin_logo">
-                    <img src="/static/images/admin/logo(wh).png" alt="admin_logo" />
-                </a>
-                <div class="home">
-                    <a href="#">HOME | </a>
-                    <a href="#">로그아웃 | </a>
-                    <a href="#">고객센터</a>
-                </div>
-            </header>
+<div class="content" th:fragment="sales">
+    <link rel="stylesheet" th:href="@{/css/admin/list.css}" />
+    <div class="dashboard">
+        <div class="content_header">
+            <h1>매출현황</h1>
+            <p>
+                HOME > 상점관리 > <strong>매출현황</strong>
+            </p>
         </div>
 
+        <section class="sectionBox">
+            <div>
+                <form action="/admin/shop/sales">
 
-        <main>
+                    <select name="type">
+                        <option value="today">일별</option>
+                        <option value="week">주간</option>
+                        <option value="month">한달</option>
+                    </select>
 
-            <aside>
-                <ul id="admin_sidebar">
-                    <li>
-                        <a href="#"><i class="fa fa-cogs" aria-hidden="true"></i>환경설정</a>
-                        <ol>
-                            <li><a href="#">기본환경정보</a></li>
-                            <li><a href="#">배너관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-store" aria-hidden="true"></i>상점관리</a>
-                        <ol>
-                            <li><a href="#">판매자현황</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-users" aria-hidden="true"></i>회원관리</a>
-                        <ol>
-                            <li><a href="#">회원현황</a></li>
-                            <li><a href="#">포인트관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-box-open" aria-hidden="true"></i>상품관리</a>
-                        <ol>
-                            <li><a href="#">상품현황</a></li>
-                            <li><a href="#">상품등록</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i>주문관리</a>
-                        <ol>
-                            <li><a href="#">주문현황</a></li>
-                            <li><a href="#">매출현황</a></li>
-                            <li><a href="#">배송관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>고객센터</a>
-                        <ol>
-                            <li><a href="#">공지사항</a></li>
-                            <li><a href="#">자주묻는질문</a></li>
-                            <li><a href="#">문의하기</a></li>
-                        </ol>
-                    </li>
-                </ul>
-            </aside>
+                </form>
+            </div>
+            <table class="admingraph">
+                <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
+                    <th>번호</th>
+                    <th>상호명</th>
+                    <th>사업자등록번호</th>
+                    <th>주문건수</th>
+                    <th>결제완료</th>
+                    <th>배송중</th>
+                    <th>배송완료</th>
+                    <th>구매확정</th>
+                    <th>주문합계</th>
+                    <th>매출합계</th>
+                </tr>
 
-            <!-- 컨텐츠 시작 -->
-            <div class="content">
+                <tr class="admin_shop-sales" style="height: 50px; ">
+                    <td>5</td>
+                    <td>(주)합천</td>
+                    <td>112-12-12345</td>
+                    <td>103</td>
+                    <td>90</td>
+                    <td>56</td>
+                    <td>52</td>
+                    <td>50</td>
+                    <td>12,870,600</td>
+                    <td>10,870,600</td>
+                </tr>
 
-                <div class="dashboard">
-                    <div class="content_header">
-                        <h1>매출현황</h1>
-                        <p>
-                            HOME > 상점관리 > <strong>매출현황</strong>
-                        </p>
-                    </div>
+            </table>
 
-                    <section class="sectionBox">
-                        <div>
-                            <form action="/admin/shop/sales">
-                                
-                                <select name="type">
-                                    <option value="today">일별</option>
-                                    <option value="week">주간</option>
-                                    <option value="month">한달</option>
-                                </select>
+            <div class="pagingBox">
+                <div class="pagingList">
+                    <!-- 이전 버튼 -->
+                    <a href="#" class="prev"></a>
 
-                            </form>
-                        </div>
-                        <table class="admingraph">
-                            <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
-                                <th>번호</th>
-                                <th>상호명</th>
-                                <th>사업자등록번호</th>
-                                <th>주문건수</th>
-                                <th>결제완료</th>
-                                <th>배송중</th>
-                                <th>배송완료</th>
-                                <th>구매확정</th>
-                                <th>주문합계</th>
-                                <th>매출합계</th>
-                            </tr>
+                    <!-- 페이지 링크 -->
+                    <a href="#">1</a>
+                    <a href="#" class="active">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">5</a>
 
-                            <tr class="admin_shop-sales" style="height: 50px; ">
-                                <td>5</td>
-                                <td>(주)합천</td>
-                                <td>112-12-12345</td>
-                                <td>103</td>
-                                <td>90</td>
-                                <td>56</td>
-                                <td>52</td>
-                                <td>50</td>
-                                <td>12,870,600</td>
-                                <td>10,870,600</td>
-                            </tr>
-
-                        </table>
-
-                        <div class="pagingBox">
-                            <div class="pagingList">
-                                <!-- 이전 버튼 -->
-                                <a href="#" class="prev"></a>
-
-                                <!-- 페이지 링크 -->
-                                <a href="#">1</a>
-                                <a href="#" class="active">2</a>
-                                <a href="#">3</a>
-                                <a href="#">4</a>
-                                <a href="#">5</a>
-
-                                <!-- 다음 버튼 -->
-                                <a href="#" class="next">></a>
-                            </div>
-                        </div>
-                    </section>
-
+                    <!-- 다음 버튼 -->
+                    <a href="#" class="next">></a>
                 </div>
             </div>
-        </main>
-        <!-- 상품목록 컨텐츠 끝 -->
-    </section>
-
-    <!--내용 끝-->
-    <div class="footer_wrapper" th:fragment="footer">
-        <footer>
-            <div id="version">LotteON ADMINISTRATOR Version 0.0.1</div>
-            <div id="copyright">
-                Copyrightⓒ LotteOn_Team1 All rights reserved.
-            </div>
-        </footer>
+        </section>
     </div>
-
-</body>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const sidebar = document.querySelectorAll('#admin_sidebar > li > a');
-        sidebar.forEach(link => {
-            const subMenu = link.nextElementSibling;
-
-            // 마우스가 들어왔을 때(submenu 열기)
-            link.addEventListener('mouseenter', function () {
-                subMenu.style.display = 'block';
-            });
-
-            // 마우스가 나갔을 때(submenu 닫기)
-            link.addEventListener('mouseleave', function () {
-                subMenu.style.display = 'none';
-            });
-
-            // 서브 메뉴 자체에 대해서도 마우스가 나갔을 때 닫히지 않도록 처리
-            subMenu.addEventListener('mouseenter', function () {
-                subMenu.style.display = 'block'; // 유지
-            });
-
-            subMenu.addEventListener('mouseleave', function () {
-                subMenu.style.display = 'none';  // 메뉴 닫기
-            });
-        });
-    });
-</script>
-
-</html>
+</div>
