--- a/src/main/resources/templates/policy/content/location.html
+++ b/src/main/resources/templates/policy/content/location.html
@@ -1,4 +1,4 @@
-
+buyer.html
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!--내용 시작-->
