--- a/src/main/resources/templates/company/content/story.html
+++ b/src/main/resources/templates/company/content/story.html
@@ -1,23 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="content" th:fragment="story">
+    <html xmlns:th="http://www.thymeleaf.org">
+
 <!--내용 시작-->
-<link rel="stylesheet" href="/css/company.css">
-<link rel="stylesheet" href="/css/company.css">
+
+<link rel="stylesheet" th:href="@{/css/company.css}">
+<div class="headContent" >
+    <div class="logoBox">
+        <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" style="width: 185px;"/></a>
+    </div>
+
+    <div>
+        <a th:href="@{/company/index}">HOME</a>
+        <a th:href="@{/company/content/culture}">기업문화</a>
+        <a class="tabOn" th:href="@{/company/content/story}">소식과 이야기</a>
+        <a th:href="@{/company/content/recruit}">채용</a>
+        <a th:href="@{/company/content/media}">미디어</a>
+    </div>
+</div>
 
         <main>
             <div class="contentHead" >롯데ON을 더 알고 싶다면!</div>
 
             <div class="contentSub">우리의 다양한 이야기를 소개합니다</div>
 
+
+
             <div class="storyNav">
-                <a href="#">전체보기</a>
-                <a href="#">기업문화</a>
-                <a href="#">인터뷰</a>
-                <a href="#">채용</a>
-                <a href="#">롯데ON</a>
-                <a href="#">보도자료</a>
-                <a href="#">ESG</a>
+                <a class="tabOn" th:href="@{/company/content/story}">전체보기</a>
+                <a th:href="@{/company/story/culture}">기업문화</a>
+                <a th:href="@{/company/story/interview}">인터뷰</a>
+                <a th:href="@{/company/story/recruit}">채용</a>
+                <a th:href="@{/company/story/lotteon}">롯데ON</a>
+                <a th:href="@{/company/story/report}">보도자료</a>
+                <a th:href="@{/company/story/ESG}">ESG</a>
             </div>
+
+
             <div class="noticeForCard">
                 <a href="#">
                     <img src="/images/company/story1.jpg" alt="사진">
@@ -51,4 +69,5 @@
                 </a>
             </div>
         </main>
+    </div>
 </html>
